Updated scala plugin